# breaking-bad

./: .gitignore  LICENSE  README.md  README_pathway.md  README_volcano.md
R/: _deps.R  hello_world.R  limma_secondary_outcomes.R  pathway_analysis.R  pathway_gsea_ranked.R  quality_control.R  volcano_plots.R
artifacts/: master_sample_sheet.csv
docs/: de_results_interpretation.md  pathway_results_interpretation.md
notebooks/: hello_world.ipynb  preamble.ipynb
pipeline/: __main__.py  __paths.py  preamble.py  quality_control.py  rma_preprocess.py  rma_summary.py
processor/src/project_tools/: data_loader.py  hello_world.py  sample_sheet_generator.py
tools/: README.md  setup.cfg
tools/src/project_tools/: _paths.py  data_loader.py  expression_preprocessing.py  limma_differential_expression.py  pathway_analysis.py  preprocessing_results.py  sample_sheet_generator.py
