[metadata]
name = project-tools
version = 0.1.0
author = Anubhav Lamsal
description = Reproducible project tooling for the Breaking Bad analysis pipeline.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    matplotlib>=3.8
    numpy>=1.26

[options.packages.find]
where = src
